Fix spacing on debug component

--- a/src/app/components/debug/debug.scss
+++ b/src/app/components/debug/debug.scss
@@ -6,6 +6,9 @@
   .pageName {
     margin: 0 8px 12px;
   }
+  .debugGuide {
+    padding: 0 8px 8px;
+  }
 
   .step {
     background-color: $color-white;
